# site

./: .gitignore  .releaserc.json  LICENSE  Makefile  Pipfile  README.md  go.mod  go.sum  hugo_new.py  netlify.toml  output.txt  package-lock.json  package.json  permalinks.csv  publications.bib  pyproject.toml  renovate.json
.github/workflows/: daily-build.yml  linting.yml  release.yml
config/_default/: config.yaml  menus.yaml  params.yaml
content/: _index.md  about.md  blog.md  contact.md  events.md  one-pager.md  press.md  products.md  results.md  services.md
content/battle-cards/: hero.md  index.md  starter.md
content/contact/: contact.md  hero.md  index.md
content/event/: _index.md
content/home/: about.md  contact.md  cta.md  experience.md  feed.md  hero.md  index.md  posts.md  projects.md  publications.md  slider.md  talks.md
content/home-contact/: index.md
content/home-projects/: index.md  projects.md
content/landing/: _index.md  agtech.md  calendly.md  careers.md  client.md  corporate-innovation.md  industry40.md  mobile-robotics.md  newsletter.md  startups.md  storytelling.md  talent.md  workshops-healthcare.md  workshops.md
content/post/: _index.md
content/press/: index.md  press.md
content/press-release/: _index.md
content/project/: _index.md
content/projects/: index.md  projects.md
content/publication/: _index.md
content/services/: contact-hero.md  contact.md  hero.md  index.md  services.md
data/: page_sharer.toml
layouts/: robots.txt
scripts/: check_permalinks.py  dump_content.py  hugo_new.py  open_permalinks.py
(+296 files in other folders)
